--- a/selfshark/templates/layout.html
+++ b/selfshark/templates/layout.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title>{{ title }}</title>
+		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="{{ url_for('static', filename='js/jquery.sha1.js') }}"></script>
 		<script src="{{ url_for('static', filename='js/core.js') }}"></script>
 		<script>
 			var selfshark;
