jquery ui added; playlist is now sortable

--- a/selfshark/templates/layout.html
+++ b/selfshark/templates/layout.html
@@ -4,6 +4,7 @@
 		<title>{{ title }}</title>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
 		<script src="{{ url_for('static', filename='js/jquery.sha1.js') }}"></script>
 		<script src="{{ url_for('static', filename='js/core.js') }}"></script>
 		<script>
